--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
+    "lenis": "^1.1.18",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
